--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -18,3 +18,11 @@ h1 {
   padding: 25px;
   border: 2px black solid;
 }
+
+.div-x {
+  background-image: url('public/x.jpg')
+}
+
+.div-o {
+  background-image: url('public/o.jpeg')
+}
