Commit add click handler for game board box
Successful click handler for when game board is clicked.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -19,10 +19,11 @@ h1 {
   border: 2px black solid;
 }
 
-.div-x {
-  background-image: url('public/x.jpg')
-}
+// might have to add but let's try to do it with just divs and HTML
+// .div-x {
+// background-image: url('public/x.jpg')
+// }
 
-.div-o {
-  background-image: url('public/o.jpeg')
-}
+// .div-o {
+//   background-image: url('public/o.jpeg')
+// }
