--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,4 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css?family=Varela+Round&display=swap');
 
 // Title
 h1 {
@@ -19,6 +20,55 @@ h1 {
   border: 2px black solid;
 }
 
+
+table {
+	border-spacing: 0px;
+}
+
+td {
+	width : 100px;
+	height: 100px;
+	border: 1.5px solid black;
+	padding : 0px;
+}
+
+/*td:hover {
+	background-color: rgba(81, 143, 99, 0.8);
+}*/
+
+table {
+	margin: 20px auto auto auto;
+}
+
+tbody {
+	grid-row-gap: 0px;
+}
+
+td:first-child {
+	border-left : 0px;
+}
+
+td:last-child {
+	border-right : 0px;
+}
+
+tr:first-child td {
+	border-top : 0px;
+}
+
+tr:last-child td {
+	border-bottom: 0px;
+}
+
+td {
+	text-align: center;
+	font-family: 'Varela Round', sans-serif;
+	font-size: 2em;
+}
+
+#winner-announcement {
+  text-align: center;
+}
 // might have to add but let's try to do it with just divs and HTML
 // .div-x {
 // background-image: url('public/x.jpg')
